test/files/neg/override-final-implicit.check
override-final-implicit.scala:6: warning: Implicit definition should have explicit type (inferred Test.this.FooExtender) [quickfixable]
  override implicit def FooExtender(foo: String) = super.FooExtender(foo)
                        ^
override-final-implicit.scala:6: error: cannot override final member:
final implicit def FooExtender(foo: String): Test.this.FooExtender (defined in class Implicits)
  override implicit def FooExtender(foo: String) = super.FooExtender(foo)
                        ^
1 warning
1 error
